--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
